# myAHRS_plus

./: README.md
Firmware/: README.md
Software/: readme.md
arduino/: myAHRS_plus_i2c.ino
common_cpp/: .cproject  .project  makefile  myahrs_plus.hpp  myahrs_plus_example.cpp  readme.md
common_cpp/windows_example/: windows_example.sln
common_cpp/windows_example/windows_example/: stdafx.cpp  windows_example.vcxproj  windows_example.vcxproj.filters
common_python/: .gitignore  .project  myahrs_model_texture.py  readme.md
common_python/basic_io/: python_example.py  readme.md
common_python/pyQT/: pyqt_example.py  readme.md
common_python/pygame/: readme.md
common_python/pygame/shooting/: myahrs_plus.py  shooting.py
common_python/pygame/shooting_mario/: shooting_mario.py
odroid_c1/: .cproject  .project  readme.md
odroid_c1/opengles_20/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.sh  index.html  readme.md
odroid_c1/opengles_20/docs/html/: 3d_8h.html  3d_8h_source.html  _anti_alias_8cpp.html  _anti_alias_8h.html  _anti_alias_8h_source.html  _anti_alias__triangle_8frag.html  _anti_alias__triangle_8frag.js  _anti_alias__triangle_8vert.js  _astc_textures_8h.js  _boids_8cpp.html  _boids_8cpp.js  _boids_8h_source.html  _clear_8cpp.html  _clear_8cpp.js  _cube_8cpp.html  _cube__cube_8vert.html  _cube_model_8cpp.html  _cube_model_8h.html  _disc_emitter_8h.html  _e_g_l_preserve_8cpp.js  _e_g_l_preserve_8h_source.html  _e_g_l_preserve__cube_8frag.html  _e_g_l_preserve__cube_8frag.js  _e_g_l_preserve__cube_8vert.html  _e_t_c2_texture_demo_8cpp.html  _e_t_c2_texture_demo_8cpp.js  _e_t_c2_texture_demo_8h.js  _e_t_c_atlas_alpha_8cpp.js  _e_t_c_atlas_alpha__atlastex_8vert.html  _e_t_c_compressed_alpha_8cpp.html  _e_t_c_compressed_alpha_8cpp.js  _e_t_c_compressed_alpha__dualtex_8frag.html  _e_t_c_compressed_alpha__dualtex_8frag.js  _e_t_c_compressed_alpha__dualtex_8vert.js  _e_t_c_mipmap_8cpp.html  _e_t_c_mipmap_8cpp.js  _e_t_c_mipmap_8h_source.html  _e_t_c_mipmap__texture_8frag.html  _e_t_c_mipmap__texture_8vert.html  _e_t_c_uncompressed_alpha_8cpp.html  (+617 more)
odroid_c1/opengles_20/inc/: myahrs_plus_for_mali_sdk.hpp
odroid_c1/opengles_20/lib/arm/: EGL.c
odroid_c1/opengles_20/samples/: CMakeLists.txt  Makefile  cmake_install.cmake
odroid_c1/opengles_20/samples/opengles_20/: Makefile  cmake_install.cmake
odroid_c1/opengles_20/simple_framework/: CMakeLists.txt  Makefile  cmake_install.cmake  simple_framework OpenGL ES 2.0.vcxproj  simple_framework OpenGL ES 2.0.vcxproj.filters  simple_framework OpenGL ES 3.0.vcxproj
odroid_c1/opengles_20/simple_framework/inc/: DesktopLinuxPlatform.h  ETCHeader.h  Mathematics.h  Matrix.h  Shader.h  Text.h  Texture.h  VectorTypes.h
odroid_c1/opengles_20/simple_framework/inc/models/: CubeModel.h  PlaneModel.h  SphereModel.h
odroid_c1/opengles_20/simple_framework/inc/ump/: ump_ref_drv.h
odroid_c1/opengles_20/simple_framework/src/: ETCHeader.cpp  LinuxOnARMPlatform.cpp  Matrix.cpp  Shader.cpp  Texture.cpp  Timer.cpp
odroid_c1/opengles_20/simple_framework/src/models/: CubeModel.cpp  SphereModel.cpp  TorusModel.cpp
odroid_xu3/: .cproject  .project  readme.md
odroid_xu3/opengles30/: CMakeLists.txt  Makefile  cleanall.sh  cmake_install.cmake  install_manifest.txt  readme.md
odroid_xu3/opengles30/docs/html/: 3d_8h.js  _anti_alias_8cpp.js  _anti_alias__triangle_8vert.html  _astc_textures_8cpp.html  _astc_textures_8cpp.js  _astc_textures_8h.html  _astc_textures_8h_source.html  _boids_8h.html  _boids_8h.js  _cube_8cpp.js  _cube_8h.html  _cube_8h_source.html  _cube__cube_8frag.html  _cube__cube_8frag.js  _cube__cube_8vert.js  _cube_model_8h_source.html  _disc_emitter_8cpp.html  _disc_emitter_8h_source.html  _e_g_l_preserve_8cpp.html  _e_g_l_preserve_8h.html  _e_g_l_preserve__cube_8vert.js  _e_t_c2_texture_demo_8h.html  _e_t_c2_texture_demo_8h_source.html  _e_t_c_atlas_alpha_8cpp.html  _e_t_c_atlas_alpha_8h.html  _e_t_c_atlas_alpha_8h_source.html  _e_t_c_atlas_alpha__atlastex_8frag.html  _e_t_c_atlas_alpha__atlastex_8frag.js  _e_t_c_atlas_alpha__atlastex_8vert.js  _e_t_c_compressed_alpha_8h.html  _e_t_c_compressed_alpha_8h_source.html  _e_t_c_compressed_alpha__dualtex_8vert.html  _e_t_c_header_8cpp.html  _e_t_c_header_8h.html  (+624 more)
odroid_xu3/opengles30/inc/: myahrs_plus.hpp  myahrs_plus_for_mali_sdk.hpp
odroid_xu3/opengles30/lib/arm/: CMakeLists.txt  GLESv2.c
odroid_xu3/opengles30/samples/: CMakeLists.txt  Makefile  cmake_install.cmake
odroid_xu3/opengles30/samples/opengles_20/cube_with_myahrs/: CMakeLists.txt  Cube.h  Cube.vcxproj  Cube_with_myahrs.cpp  Makefile  cmake_install.cmake
odroid_xu3/opengles30/samples/opengles_30/skybox_with_myahrs/: CMakeLists.txt  DesktopLinuxPlatform.cpp  DesktopLinuxPlatform.h  EGLRuntime.cpp  EGLRuntime.h  Image.cpp  Image.h  LinuxOnARMPlatform.cpp  LinuxOnARMPlatform.h  Makefile  Matrix.cpp  Matrix.h  Platform.cpp  Platform.h  Quaternions.cpp  Quaternions.h  Shader.cpp  Shader.h  Skybox.vcxproj  Skybox.vcxproj.filters  Skybox_with_myahrs.cpp  Text.cpp  Text.h  WindowsPlatform.cpp  WindowsPlatform.h  cmake_install.cmake
odroid_xu3/opengles30/simple_framework/: Makefile  cmake_install.cmake  simple_framework OpenGL ES 3.0.vcxproj.filters
raspberry_pi/: .cproject  .project  readme.md
raspberry_pi/opengles/hello_triangle_myahrs_plus/: Makefile  Makefile.include  attitude.h  myahrs_plus.hpp  myahrs_plus_example.cpp  readme.md  triangle.c
tutorial/: .cproject  .project  readme.md
(+226 files in other folders)
